defconfig: enable VIDEO_RPIVID

--- a/arch/arm64/configs/lineageos_rpi4_defconfig
+++ b/arch/arm64/configs/lineageos_rpi4_defconfig
@@ -3162,7 +3162,7 @@ CONFIG_MEDIA_CAMERA_SUPPORT=y
 # CONFIG_MEDIA_CEC_SUPPORT is not set
 # CONFIG_MEDIA_CEC_RC is not set
 CONFIG_MEDIA_CONTROLLER=y
-# CONFIG_MEDIA_CONTROLLER_REQUEST_API is not set
+CONFIG_MEDIA_CONTROLLER_REQUEST_API=y
 CONFIG_VIDEO_DEV=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
 CONFIG_VIDEO_V4L2=y
@@ -4776,6 +4776,7 @@ CONFIG_STAGING=y
 # end of Speakup console speech
 
 CONFIG_STAGING_MEDIA=y
+CONFIG_VIDEO_RPIVID=y
 
 #
 # soc_camera sensor drivers
