Revert "defconfig: enable VIDEO_CODEC_BCM2835"
This reverts commit 25dba1bf1d18220c8de9e82d951c6ce367c77307.

--- a/arch/arm64/configs/lineageos_rpi4_defconfig
+++ b/arch/arm64/configs/lineageos_rpi4_defconfig
@@ -3166,7 +3166,6 @@ CONFIG_VIDEO_V4L2=y
 CONFIG_VIDEO_V4L2_I2C=y
 # CONFIG_VIDEO_ADV_DEBUG is not set
 # CONFIG_VIDEO_FIXED_MINOR_RANGES is not set
-CONFIG_V4L2_MEM2MEM_DEV=y
 
 #
 # Media drivers
@@ -3212,7 +3211,6 @@ CONFIG_V4L_TEST_DRIVERS=y
 CONFIG_VIDEOBUF2_CORE=y
 CONFIG_VIDEOBUF2_V4L2=y
 CONFIG_VIDEOBUF2_MEMOPS=y
-CONFIG_VIDEOBUF2_DMA_CONTIG=y
 CONFIG_VIDEOBUF2_VMALLOC=y
 
 #
@@ -4805,7 +4803,7 @@ CONFIG_SND_BCM2835=y
 CONFIG_VIDEO_BCM2835=y
 CONFIG_BCM2835_VCHIQ_MMAL=y
 CONFIG_BCM_VC_SM_CMA=y
-CONFIG_VIDEO_CODEC_BCM2835=y
+# CONFIG_VIDEO_CODEC_BCM2835 is not set
 # CONFIG_VIDEO_ISP_BCM2835 is not set
 # CONFIG_PI433 is not set
 
