defconfig: enable ION_CMA_HEAP

--- a/arch/arm64/configs/lineageos_rpi4_defconfig
+++ b/arch/arm64/configs/lineageos_rpi4_defconfig
@@ -4789,7 +4789,7 @@ CONFIG_ASHMEM=y
 # CONFIG_ANDROID_VSOC is not set
 CONFIG_ION=y
 CONFIG_ION_SYSTEM_HEAP=y
-# CONFIG_ION_CMA_HEAP is not set
+CONFIG_ION_CMA_HEAP=y
 # end of Android
 
 # CONFIG_STAGING_BOARD is not set
